use a hidden double buffer and scale display up

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,11 @@ function onload() {
     </script>
 
     <style type="text/css">
+#hidden { display: none; }
     </style>
   </head>
   <body onload="setupStats(); onload();">
-    <canvas id="video" width="320" height="240"></canvas>
+    <canvas id="hidden" width="320" height="240"></canvas>
+    <canvas id="video" width="640" height="480"></canvas>
   </body>
 </html>
