added ROMs for other example games

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,17 @@
     <canvas id="video" width="640" height="480"></canvas>
     <p>
       <select id="romselect">
-        <option>Aldez</option>
-        <option>Pong</option>
+<option>Aldez</option>
+<option>Cardboard</option>
+<option>Deep</option>
+<option>Five</option>
+<option>Pentris</option>
+<option selected>Pong</option>
+<option>Salad</option>
+<option>Sokoban</option>
+<option>Warrior2</option>
+<option>Webscape</option>
+<option>Yar</option>
       </select>
       <button id="loadbutton" type="button">Load</button>
     </p>
