--- a/index.html
+++ b/index.html
@@ -19,17 +19,33 @@
     <p>Choose a ROM to begin:</p>
     <p>
       <select id="romselect">
-<option>Aldez</option>
-<option>Cardboard</option>
-<option>Deep</option>
-<option>Five</option>
-<option>Pentris</option>
-<option selected>Pong</option>
-<option>Salad</option>
-<option>Sokoban</option>
-<option>Warrior2</option>
-<option>Webscape</option>
-<option>Yar</option>
+        <optgroup label="games">
+          <option>Aldez</option>
+          <option>BasicHero</option>
+          <option>Cardboard</option>
+          <option>CleanEngine</option>
+          <option>Deep</option>
+          <option>Five</option>
+          <option>HeroTemplate</option>
+          <option>Pentris</option>
+          <option>Pong</option>
+          <option>Salad</option>
+          <option>Sokoban</option>
+          <option>Warrior2</option>
+          <option>Webscape</option>
+          <option>Worm</option>
+          <option>Yar</option>
+        </optgroup>
+        <optgroup label="demos">
+          <option selected>OpenWorld</option>
+          <option>Player</option>
+          <option>RuleR</option>
+          <option>StressTest</option>
+          <option>Swarm</option>
+          <option>TileEngine</option>
+          <option>Voters</option>
+          <option>Walk</option>
+        </optgroup>
       </select>
       <button id="loadbutton" type="button">Load</button>
     </p>
