added note about ctrl-h -j in text mode

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       <button id="loadbutton" type="button">Load</button>
     </p>
     <p class="controls">Controls:</p>
-    <p class="controls">arrow keys</p>
-    <p class="controls">enter, space or Z for the A button</p>
-    <p class="controls">shift or X for the B button</p>
+    <p class="controls">arrow keys to move; enter, space or Z for the A button; shift or X for the B button</p>
+    <p class="controls">use ctrl-h for backspace and ctrl-j for enter (e.g. in ForthWarrior)</p>
   </body>
 </html>
