renamed source files to lowercase

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>MakoVM</title>
     <script type="text/javascript" src="lib/stats.min.js"></script>
-    <script type="text/javascript" src="src/WriteBrowser.js"></script>
+    <script type="text/javascript" src="src/write_browser.js"></script>
     <script type="text/javascript" src="src/load.js"></script>
-    <script type="text/javascript" src="src/MakoConstants.js"></script>
-    <script type="text/javascript" src="src/MakoVM.js"></script>
-    <script type="text/javascript" src="src/Mako.js"></script>
+    <script type="text/javascript" src="src/mako_constants.js"></script>
+    <script type="text/javascript" src="src/mako_vm.js"></script>
+    <script type="text/javascript" src="src/mako.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <link href="style.css" rel="stylesheet" type="text/css">
